--- a/www/templates/usuarios_eventos.html
+++ b/www/templates/usuarios_eventos.html
@@ -7,7 +7,7 @@
       <br>
 
       <div>
-      <a href="#/app/novo_usuario" class="button button-block button-positive" >Novo usuario <span style="font-size:x-large" class="ion-ios-plus-outline"></span></a>
+      <a href="#/app/novo_usuario/{{evento_id}}" class="button button-block button-positive" >Novo usuario <span style="font-size:x-large" class="ion-ios-plus-outline"></span></a>
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
         <input type="search"  placeholder="Nome do usuario">
