--- a/www/templates/usuarios_eventos.html
+++ b/www/templates/usuarios_eventos.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Lista  de usuarios">
-  <ion-content  style="background-color: #ebebe0">
+  <ion-content  style="background-color: #ebebe0" ng-init="listarTodosUsuarios()">
     <br><br><br>
 
     <strong><h1 align="center"  ng-bind="quantidade_usuarios + ' usuarios confirmados'" ></h1><strong>
@@ -7,20 +7,19 @@
       <br>
 
       <div>
-      <a href="#/app/novo_usuario/{{evento_id}}" class="button button-block button-positive" >Novo usuario <span style="font-size:x-large" class="ion-ios-plus-outline"></span></a>
-      <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="search"  placeholder="Nome do usuario">
-      </label>
+        <a href="#/app/novo_usuario/{{evento_id}}" class="button button-block button-positive" >Novo usuario <span style="font-size:x-large" class="ion-ios-plus-outline"></span></a>
+          <label class="item item-input"  >
+          <i class="icon ion-search placeholder-icon"></i>
+          <input type="search" ng-model="pesquisar" placeholder="Nome do usuario" ng-keyup="localizarUsuarios(pesquisar)" >{{pesquisar}}
+          </label>
       </div>
 
       <br>
       <ion-list>
         <ion-item ng-repeat="x in lista_usuarios"   ng-href="" style="background:#ebebe0" align="left">
 
-          <img src="http://api-eden.cursophprj.com.br/usuario/list/{{x.img}}" width="10%" height="10%">
-          <h2> <strong> {{x.nome}} - {{x.email}}  </strong> </h2>
-          <p>  <a href="#" ng-click="excluir_evento(x.id)" class="button  button-assertive"  >Excluir</a></p>
+          <img src="http://api-eden.cursophprj.com.br/img/documento_perfil/{{x.img_documento}}" width="10%" height="10%">
+          <h2> <strong >{{x.nome}} - {{x.email}}  </strong> </h2>
 
         </ion-item>
       </ion-list>
