--- a/www/templates/novo_usuario.html
+++ b/www/templates/novo_usuario.html
@@ -2,12 +2,14 @@
   <br><br><br>
   <ion-content>
     <br>
+
     <form ng-submit="adicionar_usuario(Usuario,evento_id)">
 
       <h3 align="center">Novo Usuario</h3>
       <div class="list">
         <!--<input type="text" ng-model="Usuario.evento_id">-->
 
+        <input type="hidden" ng-model="Usuario.id">
         <label class="item item-input item-floating-label">
           <span class="input-label">Nome do Usuario</span>
           <input type="text" placeholder="Qual o nome do usuario ?" ng-model="Usuario.nome">
@@ -16,8 +18,12 @@
           <span class="input-label">Email do Usuario</span>
           <input type="text" placeholder="Qual o email do usuario" ng-model="Usuario.email">
         </label>
+        <label class="item item-input item-floating-label">
+          <span class="input-label">Foto do documento</span>
+          <input name="img" type="file" file-model="Usuario.img_documento"/>
+        </label>
 
-        <div class="padding" ng-show="Usuario.nome && Usuario.email">
+        <div class="padding" ng-show="Usuario.nome && Usuario.email && Usuario.img_documento">
           <button class="button button-block button-positive" ng-hide="nao_exibir_loading==false">Salvar</button>
         </div>
 
