--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,13 +19,13 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Login
+          Login &nbsp <i class="ion-person"></i>
         </ion-item>
         <ion-item menu-close href="#/app/eventos">
-          Eventos
+          Eventos &nbsp <i class="ion-flame"></i>
         </ion-item>
         <ion-item menu-close ng-click="sair()">
-          Sair
+           Sair &nbsp <i class="ion-reply"></i>
         </ion-item>
       </ion-list>
     </ion-content>
