vincular todos os usuarios a todos os eventos exsitentes

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -19,8 +19,8 @@
 
         <br>
 
-         <p>align="center"><a href="#/app/cadastrar_usuario" class="button button-block button-positive" ><p style="font-size: 15px">Entrar</p></a></p>
-        <p>align="center"><a href="#/app/cadastrar_usuario" class="button button-block button-assertive" ><p>Não sou cadastrado</p></a></p>
+         <p align="center"><a href="#/app/cadastrar_usuario" class="button button-block button-positive">Entrar </p>
+        <p align="center"><a href="#/app/cadastrar_usuario" class="button button-block button-positive">Não sou cadastrado </p>
 
       </div>
     </form>
